--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,12 @@
     "eslint-config-next": "13.4.9",
     "moment": "^2.29.4",
     "next": "13.4.9",
+    "nookies": "^2.5.2",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-modern-drawer": "^1.2.0",
     "react-router-dom": "^6.16.0",
     "tailwindcss": "3.3.2",
